# sdl-helper

./: .gitmodules  CMakeLists.txt  README.md  Setup.bat
include/: Application.h  Components.h  FontManager.h  Scene.h  SceneManager.h  SpriteRenderingSystem.h  TextRenderingSystem.h
src/: SceneManager.cpp
